--- a/Picro/Common/Modules/Picro.Module.Identity/Picro.Module.Identity.csproj
+++ b/Picro/Common/Modules/Picro.Module.Identity/Picro.Module.Identity.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 		<PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="DI\" />
