--- a/Picro/Common/Picro.Common/Picro.Common.csproj
+++ b/Picro/Common/Picro.Common/Picro.Common.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Autofac" Version="6.1.0" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 </Project>
