--- a/Picro/Common/Modules/Picro.Module.Image/Picro.Module.Image.csproj
+++ b/Picro/Common/Modules/Picro.Module.Image/Picro.Module.Image.csproj
@@ -6,7 +6,8 @@
 		<PackageReference Include="Autofac" Version="6.1.0" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
 		<PackageReference Include="MassTransit" Version="7.1.1" />
-		<PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 	<ItemGroup>
@@ -15,4 +16,4 @@
 		<ProjectReference Include="..\..\Picro.Common\Picro.Common.csproj" />
 		<ProjectReference Include="..\Picro.Module.Identity\Picro.Module.Identity.csproj" />
 	</ItemGroup>
-</Project>
+		</Project>
