--- a/Picro/Common/Picro.Common.Storage/Picro.Common.Storage.csproj
+++ b/Picro/Common/Picro.Common.Storage/Picro.Common.Storage.csproj
@@ -6,10 +6,11 @@
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.1.0" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
 		<PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Picro.Common\Picro.Common.csproj" />
 	</ItemGroup>
-		</Project>
+</Project>
