--- a/Picro/Common/Picro.Common.SignalR/Picro.Common.SignalR.csproj
+++ b/Picro/Common/Picro.Common.SignalR/Picro.Common.SignalR.csproj
@@ -11,6 +11,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Modules\Picro.Module.Identity\Picro.Module.Identity.csproj" />
+		<ProjectReference Include="..\Modules\Picro.Module.User\Picro.Module.User.csproj" />
 	</ItemGroup>
 </Project>
