--- a/Picro/Common/Modules/Picro.Module.Image/Picro.Module.Image.csproj
+++ b/Picro/Common/Modules/Picro.Module.Image/Picro.Module.Image.csproj
@@ -5,6 +5,7 @@
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.1.0" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
+		<PackageReference Include="Hangfire.Core" Version="1.7.18" />
 		<PackageReference Include="MassTransit" Version="7.1.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
